fix: header z-index

--- a/app/styles.css
+++ b/app/styles.css
@@ -189,8 +189,7 @@ audio.audio::-webkit-media-controls-timeline-container {
 }
 
 .header {
-
-  @apply border-accent bg-primary text-paragraph sticky top-0 z-10 w-screen border-b-2 border-solid;
+  @apply border-accent bg-primary text-paragraph sticky top-0 z-20 w-screen border-b-2 border-solid;
 }
 
 .header:has(.menu-button:focus-within) .header-links {
